[gd_scene load_steps=33 format=3 uid="uid://dmdmhbhfstocv"]

[ext_resource type="PackedScene" uid="uid://cpoqftvw7cmwc" path="res://scenes/prefabs/main_menu.tscn" id="1_tnr7r"]
[ext_resource type="PackedScene" uid="uid://c64unnd0sbjg3" path="res://scenes/main/focus.tscn" id="2_40oed"]
[ext_resource type="PackedScene" uid="uid://fdml1myssgve" path="res://scenes/main/settings.tscn" id="3_raklf"]
[ext_resource type="AudioStream" uid="uid://bclfstr8v3sol" path="res://assets/sound/work/work-01.mp3" id="4_1bhdb"]
[ext_resource type="Script" path="res://scripts/ui/timers.gd" id="4_8vc41"]
[ext_resource type="Texture2D" uid="uid://cl4d2s5jubnxs" path="res://assets/image/add-200xx.png" id="5_6kiug"]
[ext_resource type="Texture2D" uid="uid://c518hyj8atfix" path="res://assets/image/edit2-200xx.png" id="5_8xjtm"]
[ext_resource type="AudioStream" uid="uid://dm4c58g2cr6hr" path="res://assets/sound/rest/rest-01.mp3" id="5_tlkag"]
[ext_resource type="PackedScene" uid="uid://c48exuv8lxl23" path="res://scenes/prefabs/timer_category.tscn" id="5_v24vs"]
[ext_resource type="AudioStream" uid="uid://ddnue4qadrn5v" path="res://assets/sound/long/long-01.mp3" id="6_0cq6r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p6dxv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_savda"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7ynhj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fmrmg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tqken"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_grxy3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ev7fy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_baey3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sxe27"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p3afv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o7825"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vp2x7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xphvk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2re0t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tkek0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ms6b3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w5rj1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kmvo4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v36gt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eh2fm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_heye8"]

[sub_resource type="Theme" id="Theme_d1udh"]
default_font_size = 25
Button/styles/focus = SubResource("StyleBoxEmpty_p6dxv")
CheckBox/styles/focus = SubResource("StyleBoxEmpty_savda")
CheckButton/styles/focus = SubResource("StyleBoxEmpty_7ynhj")
CodeEdit/styles/focus = SubResource("StyleBoxEmpty_fmrmg")
ColorPickerButton/styles/focus = SubResource("StyleBoxEmpty_tqken")
HScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_grxy3")
ItemList/styles/cursor_unfocused = SubResource("StyleBoxEmpty_ev7fy")
ItemList/styles/focus = SubResource("StyleBoxEmpty_baey3")
ItemList/styles/selected_focus = null
LineEdit/styles/focus = SubResource("StyleBoxEmpty_sxe27")
LinkButton/styles/focus = SubResource("StyleBoxEmpty_p3afv")
MenuButton/styles/focus = SubResource("StyleBoxEmpty_o7825")
OptionButton/styles/focus = SubResource("StyleBoxEmpty_vp2x7")
RichTextLabel/styles/focus = SubResource("StyleBoxEmpty_xphvk")
TabBar/styles/tab_focus = SubResource("StyleBoxEmpty_2re0t")
TabContainer/styles/tab_focus = SubResource("StyleBoxEmpty_tkek0")
TextEdit/styles/focus = SubResource("StyleBoxEmpty_ms6b3")
Tree/styles/cursor_unfocused = SubResource("StyleBoxEmpty_w5rj1")
Tree/styles/focus = SubResource("StyleBoxEmpty_kmvo4")
Tree/styles/selected_focus = SubResource("StyleBoxEmpty_v36gt")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxEmpty_eh2fm")
Window/styles/embedded_unfocused_border = SubResource("StyleBoxEmpty_heye8")

[node name="Control_Pc" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_d1udh")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox_Main" type="HBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Panel_Tools" type="Panel" parent="Margin/HBox_Main"]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="VBox_Main" type="VBoxContainer" parent="Margin/HBox_Main"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxTools" type="HBoxContainer" parent="Margin/HBox_Main/VBox_Main"]
layout_mode = 2

[node name="Check_Tools" type="CheckButton" parent="Margin/HBox_Main/VBox_Main/HBoxTools"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "
"

[node name="Control_ToolsBuffer" type="Control" parent="Margin/HBox_Main/VBox_Main/HBoxTools"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox_Menu" parent="Margin/HBox_Main/VBox_Main/HBoxTools" instance=ExtResource("1_tnr7r")]
layout_mode = 2

[node name="Control_OtherBuffer" type="Control" parent="Margin/HBox_Main/VBox_Main/HBoxTools"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Check_Timers" type="CheckButton" parent="Margin/HBox_Main/VBox_Main/HBoxTools"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
button_pressed = true

[node name="TabContainer" type="TabContainer" parent="Margin/HBox_Main/VBox_Main"]
layout_mode = 2
size_flags_vertical = 3
tab_alignment = 1

[node name="Focus" parent="Margin/HBox_Main/VBox_Main/TabContainer" instance=ExtResource("2_40oed")]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Settings" parent="Margin/HBox_Main/VBox_Main/TabContainer" instance=ExtResource("3_raklf")]
visible = false
layout_mode = 2

[node name="Panel_Timers" type="Panel" parent="Margin/HBox_Main"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="Scroll_Timers" type="ScrollContainer" parent="Margin/HBox_Main/Panel_Timers"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox_Timers" type="VBoxContainer" parent="Margin/HBox_Main/Panel_Timers/Scroll_Timers"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
script = ExtResource("4_8vc41")

[node name="HBox_Title" type="HBoxContainer" parent="Margin/HBox_Main/Panel_Timers/Scroll_Timers/VBox_Timers"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="Button_Edit" type="Button" parent="Margin/HBox_Main/Panel_Timers/Scroll_Timers/VBox_Timers/HBox_Title"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
icon = ExtResource("5_8xjtm")
expand_icon = true

[node name="Label_Title" type="Label" parent="Margin/HBox_Main/Panel_Timers/Scroll_Timers/VBox_Timers/HBox_Title"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Selected:
Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button_Add" type="Button" parent="Margin/HBox_Main/Panel_Timers/Scroll_Timers/VBox_Timers/HBox_Title"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
icon = ExtResource("5_6kiug")
expand_icon = true

[node name="VBox_Category" parent="Margin/HBox_Main/Panel_Timers/Scroll_Timers/VBox_Timers" instance=ExtResource("5_v24vs")]
layout_mode = 2

[node name="VBox_Notifications" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Node_Audio" type="Node" parent="."]

[node name="Audio_Working" type="AudioStreamPlayer" parent="Node_Audio"]
bus = &"Work"

[node name="Audio_Resting" type="AudioStreamPlayer" parent="Node_Audio"]
bus = &"Work"

[node name="Audio_Work" type="AudioStreamPlayer" parent="Node_Audio"]
stream = ExtResource("4_1bhdb")
bus = &"Work"

[node name="Audio_Rest" type="AudioStreamPlayer" parent="Node_Audio"]
stream = ExtResource("5_tlkag")
bus = &"Rest"

[node name="Audio_Long" type="AudioStreamPlayer" parent="Node_Audio"]
stream = ExtResource("6_0cq6r")
bus = &"Long"

[connection signal="toggled" from="Margin/HBox_Main/VBox_Main/HBoxTools/Check_Tools" to="Margin/HBox_Main/VBox_Main/HBoxTools/HBox_Menu" method="_on_check_tools_toggled"]
[connection signal="toggled" from="Margin/HBox_Main/VBox_Main/HBoxTools/Check_Timers" to="Margin/HBox_Main/VBox_Main/HBoxTools/HBox_Menu" method="_on_check_timers_toggled"]
[connection signal="pressed" from="Margin/HBox_Main/Panel_Timers/Scroll_Timers/VBox_Timers/HBox_Title/Button_Edit" to="Margin/HBox_Main/Panel_Timers/Scroll_Timers/VBox_Timers" method="_on_button_edit_pressed"]
[connection signal="pressed" from="Margin/HBox_Main/Panel_Timers/Scroll_Timers/VBox_Timers/HBox_Title/Button_Add" to="Margin/HBox_Main/Panel_Timers/Scroll_Timers/VBox_Timers" method="_on_button_add_pressed"]
